syntax = "proto3";

option csharp_namespace = "API";

import "google/protobuf/timestamp.proto";

package licensor;

service Licensor {
  rpc CreateLicense (CreateLicenseGrpcRequest) returns (CreateLicenseGrpcResponse);
}

message CreateLicenseGrpcRequest {
  string userId = 1;
  google.protobuf.Timestamp expires = 2;
}

message CreateLicenseGrpcResponse {
  bool success = 1;
}